[package]
name = "streaming-weather-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
chrono = "0.4.26"
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["time", "rt", "rt-multi-thread", "macros"]}
